	  is restricted), they now use the cupsTempFd() function.
	- The mime.types file was missing the recognition rule
	  for Sun Raster images.
	- The admin CGI was passing a printer make string to
	  ippSetCGIVars() that was being replaced in that
	  function.
	- "lpoptions -l" would resave the options...
	- The EPSON drivers now send the "end packet mode"
	  command when printing to USB devices.


CHANGES IN CUPS V1.1.6-3

	- The configure script put the JPEG library before the
	  TIFF library; this caused problems in some
	  configurations since the TIFF library also supports
	  JPEG compression of TIFF images.
	- Updated the configure script and makefiles to handle
	  admin man pages with the "1m" extension (HP-UX, IRIX,
	  Solaris, Tru64) and in odd directories (IRIX)
	- The updated cupsTempFile() function did not return
	  the filename when called with a filename buffer of
	  NULL (previously it used a static buffer.)
	- FreeBSD uses /dev/unlptN, but NetBSD and OpenBSD use
	  /dev/ulptN.
	- DeletePrinter() didn't remove the printer from any
	  classes it was a member of.
	- DeletePrinterFromClass() didn't preserve the
	  implicit status of a class.
	- DeletePrinterFromClasses() didn't remove printers
	  from implicit classes.
	- StartJob() didn't send the job-sheets, job-priority,
	  and job-hold-until attributes to remote printers.
	- LoadAllJobs() was looking for job-sheets-completed
	  instead of job-media-sheets-completed.  This would
	  prevent accumulation of page data after a restart
	  of the scheduler.
	- The pstops and imagetops filters now generate copies
	  using the appropriate method for a Level 1, 2, or 3
	  printer since some Level 2/3 printers don't support
	  the /#copies variable anymore.
	- The man page for cups-lpd did not mention the "-o"
	  option.
	- The IPP backend didn't handle version-not-supported
	  errors and revert to IPP/1.0 (previously it only checked
	  for a bad-request error)